--- a/CustomAmmoCategories/AIM_settings.json
+++ b/CustomAmmoCategories/AIM_settings.json
@@ -52,6 +52,14 @@
   /* Show heat, stability, and distance / movement number in selection panel (bottom left) and target panel (top).  Default true. */
 
   "ShowNumericInfo": true,
+  
+  /* Numbers info font size in percents.  Default 150. */
+  
+  "ShowNumericInfoSize":150,
+
+  /*Numbers info Y axis offset */
+  
+  "ShowNumericInfoOffsetY":-30,
 
   /* Factor in heat multiplier at target location when previewing movement.  Default true. */
 
@@ -320,10 +328,10 @@
   "DiminishingPenaltyMax": 32,
 
   /* Specify set of hit modifiers of ranged attacks. Leave empty to keep it unchanged.  Order and letter case does not matter.
-   * Default "ArmMounted, Direction, Height, Indirect, Inspired, Jumped, LocationDamage, Obstruction, Precision, Range, Refire, SelfHeat, SelfStoodUp, SelfTerrain, SensorImpaired, SensorLock, Sprint, TargetEffect, TargetEvasion, TargetProne, TargetShutdown, TargetSize, TargetTerrain, Walked, WeaponAccuracy, WeaponDamage".
+   * Default "ArmMounted, Direction, Height, Indirect, Inspired, Jumped, LocationDamage, Obstruction, Precision, Range, Refire, SelfHeat, SelfStoodUp, SelfTerrain, SensorImpaired, SensorLock, Sprint, TargetEffect, TargetEvasion, TargetProne, TargetShutdown, TargetSize, TargetTags, TargetTerrain, Walked, WeaponAccuracy, WeaponDamage".
    * You can remove some options or replace SelfTerrain and TargetTerrain with SelfTerrainMelee and TargetTerrainMelee. */
 
-  "RangedAccuracyFactors": "ArmMounted, Direction, Height, Indirect, Inspired, Jumped, Obstruction, Precision, Range, Refire, SelfHeat, SelfStoodUp, SelfTerrain, SensorImpaired, SensorLock, Sprint, TargetEffect, TargetEvasion, TargetProne, TargetShutdown, TargetSize, TargetTerrain, Walked, WeaponAccuracy, WeaponDamage",
+  "RangedAccuracyFactors": "ArmMounted, Direction, Height, Indirect, Inspired, Jumped, Obstruction, Precision, Range, Distance, Direct, Refire, SelfHeat, SelfStoodUp, SelfTerrain, SensorImpaired, SensorLock, Sprint, TargetEffect, TargetEvasion, TargetProne, TargetShutdown, TargetSize, TargetTags, TargetTerrain, Walked, WeaponAccuracy, WeaponDamage",
 
   /* Specify set of hit modifiers of melee and DFA attacks. Leave empty to keep it unchanged.  Order and letter case does not matter.
    * Default "DFA, Direction, Height, Inspired, Jumped, SelfChassis, SelfHeat, SelfStoodUp, SelfTerrainMelee, Sprint, TargetEffect, TargetEvasion, TargetProne, TargetShutdown, TargetSize, TargetTerrainMelee, Walked, WeaponAccuracy".
