--- a/CustomAmmoCategories/settings.json
+++ b/CustomAmmoCategories/settings.json
@@ -331,7 +331,7 @@
    * Default "ArmMounted, Direction, Height, Indirect, Inspired, Jumped, LocationDamage, Obstruction, Precision, Range, Refire, SelfHeat, SelfStoodUp, SelfTerrain, SensorImpaired, SensorLock, Sprint, TargetEffect, TargetEvasion, TargetProne, TargetShutdown, TargetSize, TargetTags, TargetTerrain, Walked, WeaponAccuracy, WeaponDamage".
    * You can remove some options or replace SelfTerrain and TargetTerrain with SelfTerrainMelee and TargetTerrainMelee. */
 
-  "RangedAccuracyFactors": "ArmMounted, Direction, Height, Indirect, Inspired, Jumped, Obstruction, Precision, Range, Refire, SelfHeat, SelfStoodUp, SelfTerrain, SensorImpaired, SensorLock, Sprint, TargetEffect, TargetEvasion, TargetProne, TargetShutdown, TargetSize, TargetTerrain, Walked, WeaponAccuracy, WeaponDamage",
+  "RangedAccuracyFactors": "ArmMounted, Direction, Height, Indirect, Inspired, Jumped, Obstruction, Precision, Range, Refire, SelfHeat, SelfStoodUp, SelfTerrain, SensorImpaired, SensorLock, Sprint, TargetEffect, TargetEvasion, TargetProne, TargetShutdown, TargetSize, TargetTags, TargetTerrain, Walked, WeaponAccuracy, WeaponDamage",
 
   /* Specify set of hit modifiers of melee and DFA attacks. Leave empty to keep it unchanged.  Order and letter case does not matter.
    * Default "DFA, Direction, Height, Inspired, Jumped, SelfChassis, SelfHeat, SelfStoodUp, SelfTerrainMelee, Sprint, TargetEffect, TargetEvasion, TargetProne, TargetShutdown, TargetSize, TargetTerrainMelee, Walked, WeaponAccuracy".
@@ -451,7 +451,7 @@
    * A number between 0 and 1 (exclusive) means a fraction of max armour, 0 and -1 means a fraction of current armour,
    * while 1 and above means a fixed damage threshold. */
 
-  "ThroughArmorCritThreshold": 0.45,
+  "ThroughArmorCritThreshold": 0.55,
 
   /* Base crit chance of a location with zero armour but full structure.  Works by fully replacing mech crit system.
    * Set to 0 to disable through armour critical.  Default 0.  Can be 0 to 1, e.g. 0.2 for 20%.
@@ -463,20 +463,20 @@
    * Actual through armour crit rate is between this and zero armour chance.  Default 0.  Can be -1 to 1, e.g. 0.1 for 10%.
    * If negative, crits will not happen until armour is sufficiently weakened. */
 
-  "CritChanceFullArmor": -0.45,
+  "CritChanceFullArmor": -0.5,
 
   /* Base crit chance of a structurally hit location if it is at zero structure, can be 0 to 1.  Default 1, same as game. */
 
-  "CritChanceZeroStructure": 0.7,
+  "CritChanceZeroStructure": 0.6,
 
   /* Base crit chance of a structurally hit location if it is at full structure, can be -1 to 1.  Default 0, same as game. */
 
-  "CritChanceFullStructure": -0.15,
+  "CritChanceFullStructure": -0.1,
 
   /* Min crit chance of a structurally hit location, after factoring structure% but before multiplier.  Default 0.5, same as game.
    * This setting simply overrides ResolutionConstants.MinCritChance in CombatGameConstants.json. */
 
-  "CritChanceMin": 0.56,
+  "CritChanceMin": 0.5,
 
   /* Max crit chance of a structurally hit location, after factoring structure% but before multiplier.  Default 1, same as game. */
 
