CAC bugfixes + AR localization prepare
1. CAC: fixed AMS ammo ejection
2. CAC: trajectory generation for weapon without representation not cause exception
3. CAC: Added feature weapon name line break for russian language
3. AR: preparied for localization

--- a/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
+++ b/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
@@ -176,5 +176,6 @@
 "CritLocationTransfer": true,
 "APMinCritChance": 0.1,
 "NoCritFloatieMessage": true,
-"RemoveFromCritRollStatName": "ignore_damage"
+"RemoveFromCritRollStatName": "ignore_damage",
+"PatchWeaponSlotsOverflowCultures": ["CULTURE_RU_RU"]
 }
