--- a/BattletechPerformanceFix/Settings.json
+++ b/BattletechPerformanceFix/Settings.json
@@ -1,5 +1,5 @@
 {
-  "logLevel": "Debug",
+  "logLevel": "debug",
   "features": {
     "MechlabFix": true,
     "LoadFixes": true,
@@ -11,7 +11,9 @@
     "ExtraLogging": true,
     "ShaderDependencyOverride": true,
     "GhostBlipOverride": false,
-    "DisableDeployAudio": false
+    "DisableDeployAudio": false,
+    "RemovedFlashpointFix": true,
+    "DisableSimAnimations": true
   },
   "WantContractsLagFixVerify": false
 }
