--- a/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
+++ b/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
@@ -177,5 +177,8 @@
 "APMinCritChance": 0.1,
 "NoCritFloatieMessage": true,
 "RemoveFromCritRollStatName": "ignore_damage",
-"PatchWeaponSlotsOverflowCultures": ["CULTURE_RU_RU"]
+"PatchWeaponSlotsOverflowCultures": ["CULTURE_RU_RU"],
+"FiringPreviewRecalcTrottle":0,
+"SelectionStateMoveBaseProcessMousePosTrottle": 4,
+"UpdateReticleTrottle":8
 }
