--- a/RogueModuleTech/AMS/Weapon_LRM_FLARELAUNCHER_AMS.json
+++ b/RogueModuleTech/AMS/Weapon_LRM_FLARELAUNCHER_AMS.json
@@ -22,6 +22,21 @@
             "SortKey": "03001"
         }
     },
+	  "Auras": [
+    {
+      "Id": "AMS",
+      "Name": "AMS",
+      "ReticleColor": "#800000",
+      "Range": 10,
+      "RemoveOnSensorLock": false,
+      "State": "Persistent",
+      "ApplySelf": false,
+      "HideOnNotSelected": true,
+      "AllyStealthAffection": "None",
+      "EnemyStealthAffection": "None",
+      "IsPositiveToAlly": true
+    }
+  ],
     "Category": "AntiPersonnel",
     "Type": "LRM",
     "WeaponSubType": "LRM5",
