Added the Helepolis
Updated all defs to the new prefab, updated the icon to Eternus's new one and added movedef/gyro to appropiate folders

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ ICF/chassisdefs/vehiclechassisdef_ICF_Steiner_Light_Scout.json
 ICF/vechdefs/vehicaldef_ICF_Steiner_Light.json
 
 .idea/**
+Jihad 3068-3080/chassis/desktop.ini
+*.ini
