--- a/BTRandomStartByDifficultyMenu/Menus/CareerDifficultySettings.json
+++ b/BTRandomStartByDifficultyMenu/Menus/CareerDifficultySettings.json
@@ -2630,7 +2630,7 @@
 			"Options": [
 				{
 					"ID": "diff_UrCruinne",
-					"Name": "UrCruinne",
+					"Name": "Primitive",
 					"TelemetryEventDesc": "",
 					"DifficultyValue": 0,
 					"CareerScoreModifier" : 0,
@@ -2643,7 +2643,7 @@
 						{
 							"ConstantType": "CareerMode",
 							"ConstantName": "StartingRandomMechLists",
-							"ConstantValue": "itemCollection_Mechs_Starting_0,itemCollection_Mechs_Starting_1,itemCollection_Mechs_Starting_2,itemCollection_Mechs_Starting_3,itemCollection_Mechs_Starting_4"
+							"ConstantValue": "itemCollection_Mechs_Starting_Primitive_Heavy,itemCollection_Mechs_Starting_Primitive_Light,itemCollection_Mechs_Starting_Primitive_Medium,itemCollection_Mechs_Starting_Primitive1_Light,itemCollection_Mechs_Starting_Primitive1_Medium"
 						},
 						{
                             "ConstantType": "CareerMode",
@@ -3310,7 +3310,7 @@
 		{
 							"ConstantType": "CareerMode",
 							"ConstantName": "StartingSystems",
-							"ConstantValue": "Terra"
+							"ConstantValue": "EC3040-B42A"
 						},
 		{
 							"ConstantType": "CareerMode",
