--- a/BiggerDrop/settings.json
+++ b/BiggerDrop/settings.json
@@ -1,8 +1,13 @@
 {
   "debugLog": true,
   "additionalLanceName": "EXTRA LANCE",
-  "additinalMechSlots": 0,
-  "additinalPlayerMechSlots": 0,
+  "additinalMechSlots": 1,
+  "additinalPlayerMechSlots": 1,
   "defaultMaxTonnage": 400,
-  "allowUpgrades" : true
+  "allowUpgrades" : true,
+  "showAdditionalArgoUpgrades" : true,
+  "argoUpgradeName" : "Command & Control",
+  "argoUpgradeCategory1Name" : "Drop Size",
+  "argoUpgradeCategory2Name" : "Mech Control",
+  "argoUpgradeCategory3Name" : "Drop Tonnage"
 }
