--- a/MissionControlRandom/settings.json
+++ b/MissionControlRandom/settings.json
@@ -11,7 +11,7 @@
     "IncludeEnemyTurrets": false,
   },
   "AdditionalLances": {
-    "Enable": false,
+    "Enable": true,
     "UseElites": false,
     "UseDialogue": true,
     "SkullValueMatters": true,
@@ -28,6 +28,10 @@
     "Enable": true,
     "Autofill": true,
     "LanceSizes": {
+	"3": [{
+        "Faction": "auriganpirates",
+        "DifficultyMod": 1
+      }],
       "5": [
         {
           "Faction": "ClanBurrock",
