--- a/MissionControlMassive/settings.json
+++ b/MissionControlMassive/settings.json
@@ -28,6 +28,10 @@
     "Enable": true,
     "Autofill": true,
     "LanceSizes": {
+	"3": [{
+        "Faction": "auriganpirates",
+        "DifficultyMod": 1
+      }],
       "5": [
         {
           "Faction": "ClanBurrock",
