--- a/MissionControl/lances/Damaged_Easy_MechsOnly_50.json
+++ b/MissionControl/lances/Damaged_Easy_MechsOnly_50.json
@@ -1,18 +1,154 @@
 {
   "lanceKey": "Damaged_Easy_MechsOnly_50",
-  "lanceDefId": "Tagged",
+  "lanceDefId": "Manual",
   "lanceTagSet": {
     "items": [
-      "lance_type_support",
-            "lance_type_dynamic",
-            "lance_type_mech",
-            "lance_type_notallvehicles",
-            "lance_type_roguetech"
     ]
   },
    "spawnEffectTags": {
     "items": ["spawn_poorly_maintained_50"]
   },
   "unitSpawnPointOverrideList": [
+   {
+            "unitType": "Mech",
+            "unitId": "Tagged",
+            "unitSimGameID": null,
+            "pilotId": "Tagged",
+            "pilotSimGameID": null,
+            "unitTagSet": {
+                "items": [
+                    "unit_mech",
+					"unit_indirectFire",
+                    "{CUR_TEAM.faction}"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "excludedUnitTagSet": {
+                "items": [
+                    "unit_noncombatant",
+                    "unit_bracket_low",
+                    "unit_assault",
+                    "unit_heavy"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "pilotTagSet": {
+                "items": [
+                    "pilot_npc_d6",
+                    "pilot_npc_high"
+                ],
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "excludedPilotTagSet": {
+                "items": null,
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "locked": false
+        },
+        {
+            "unitType": "Mech",
+            "unitId": "Tagged",
+            "unitSimGameID": null,
+            "pilotId": "Tagged",
+            "pilotSimGameID": null,
+            "unitTagSet": {
+                "items": [
+                    "unit_mech",
+					"unit_indirectFire",
+                    "{CUR_TEAM.faction}"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "excludedUnitTagSet": {
+                "items": [
+                    "unit_noncombatant",
+                    "unit_legendary",
+                    "unit_bracket_low",
+                    "unit_assault",
+                    "unit_heavy"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "pilotTagSet": {
+                "items": [
+                    "pilot_npc_d6"
+                ],
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "excludedPilotTagSet": {
+                "items": null,
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "locked": false
+        },
+        {
+            "unitType": "Mech",
+            "unitId": "Tagged",
+            "unitSimGameID": null,
+            "pilotId": "Tagged",
+            "pilotSimGameID": null,
+            "unitTagSet": {
+                "items": [
+                    "unit_mech",
+					"unit_indirectFire",
+                    "{CUR_TEAM.faction}"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "excludedUnitTagSet": {
+                "items": [
+                    "unit_noncombatant",
+                    "unit_legendary",
+                    "unit_assault"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "pilotTagSet": {
+                "items": [
+                    "pilot_npc_d6"
+                ],
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "excludedPilotTagSet": {
+                "items": null,
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "locked": false
+        },
+        {
+            "unitType": "Mech",
+            "unitId": "Tagged",
+            "unitSimGameID": null,
+            "pilotId": "Tagged",
+            "pilotSimGameID": null,
+            "unitTagSet": {
+                "items": [
+                    "unit_mech",
+					"unit_indirectFire",
+                    "{CUR_TEAM.faction}"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "excludedUnitTagSet": {
+                "items": [
+                    "unit_noncombatant",
+                    "unit_legendary",
+                    "unit_bracket_high",
+                    "unit_assault"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "pilotTagSet": {
+                "items": [
+                    "pilot_npc_d6"
+                ],
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "excludedPilotTagSet": {
+                "items": null,
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "locked": false
+        }
   ]
 }
