--- a/MissionControl/lances/Damaged_Easy_Mixed_25.json
+++ b/MissionControl/lances/Damaged_Easy_Mixed_25.json
@@ -1,18 +1,179 @@
 {
   "lanceKey": "Damaged_Easy_Mixed_25",
-  "lanceDefId": "Tagged",
+  "lanceDefId": "Manual",
   "lanceTagSet": {
     "items": [
-        "lance_type_support",
-            "lance_type_dynamic",
-            "lance_type_mixed",
-            "lance_type_notallvehicles",
-            "lance_type_roguetech"
     ]
   },
    "spawnEffectTags": {
     "items": ["spawn_poorly_maintained_25"]
   },
   "unitSpawnPointOverrideList": [
+  {
+            "unitType": "Mech",
+            "unitId": "Tagged",
+            "unitSimGameID": null,
+            "pilotId": "Tagged",
+            "pilotSimGameID": null,
+            "unitTagSet": {
+                "items": [
+                    "unit_mech",
+					"unit_indirectFire",
+                    "{CUR_TEAM.faction}"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "excludedUnitTagSet": {
+                "items": [
+                    "unit_superheavytank",
+                    "unit_superheavy",
+                    "unit_noncombatant",
+                    "unit_bracket_high",
+                    "unit_advanced",
+                    "unit_turret",
+                    "unit_assault",
+                    "unit_heavy",
+                    "unit_medium"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "pilotTagSet": {
+                "items": [
+                    "pilot_npc_d2",
+                    "pilot_npc_high"
+                ],
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "excludedPilotTagSet": {
+                "items": null,
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "locked": false
+        },
+        {
+            "unitType": "Vehicle",
+            "unitId": "Tagged",
+            "unitSimGameID": null,
+            "pilotId": "Tagged",
+            "pilotSimGameID": null,
+            "unitTagSet": {
+                "items": [
+                    "unit_vehicle",
+					"unit_indirectFire",
+                    "{CUR_TEAM.faction}"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "excludedUnitTagSet": {
+                "items": [
+                    "unit_noncombatant",
+                    "unit_advanced",
+                    "unit_bracket_med",
+                    "unit_bracket_high",
+                    "unit_turret",
+                    "unit_superheavytank",
+                    "unit_superheavy",
+                    "unit_assault",
+                    "unit_heavy"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "pilotTagSet": {
+                "items": [
+                    "pilot_npc_tanker_d2",
+                    "{CUR_TEAM.faction}"
+                ],
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "excludedPilotTagSet": {
+                "items": null,
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "locked": false
+        },
+        {
+            "unitType": "Vehicle",
+            "unitId": "Tagged",
+            "unitSimGameID": null,
+            "pilotId": "Tagged",
+            "pilotSimGameID": null,
+            "unitTagSet": {
+                "items": [
+                    "unit_vehicle",
+					"unit_indirectFire",
+                    "{CUR_TEAM.faction}"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "excludedUnitTagSet": {
+                "items": [
+                    "unit_noncombatant",
+                    "unit_advanced",
+                    "unit_legendary",
+                    "unit_bracket_med",
+                    "unit_bracket_high",
+                    "unit_turret",
+                    "unit_superheavytank",
+                    "unit_superheavy",
+                    "unit_assault",
+                    "unit_heavy",
+                    "unit_medium"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "pilotTagSet": {
+                "items": [
+                    "pilot_npc_tanker_d2",
+                    "{CUR_TEAM.faction}"
+                ],
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "excludedPilotTagSet": {
+                "items": null,
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "locked": false
+        },
+        {
+            "unitType": "Mech",
+            "unitId": "Tagged",
+            "unitSimGameID": null,
+            "pilotId": "Tagged",
+            "pilotSimGameID": null,
+            "unitTagSet": {
+                "items": [
+                    "unit_mech",
+					"unit_indirectFire",
+                    "{CUR_TEAM.faction}"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "excludedUnitTagSet": {
+                "items": [
+                    "unit_noncombatant",
+                    "unit_advanced",
+                    "unit_legendary",
+                    "unit_bracket_med",
+                    "unit_bracket_high",
+                    "unit_turret",
+                    "unit_superheavytank",
+                    "unit_superheavy",
+                    "unit_assault",
+                    "unit_heavy"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "pilotTagSet": {
+                "items": [
+                    "pilot_npc_d2"
+                ],
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "excludedPilotTagSet": {
+                "items": null,
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "locked": false
+        }
   ]
 }
