--- a/MissionControl/lances/Damaged_Easy_TanksOnly_50.json
+++ b/MissionControl/lances/Damaged_Easy_TanksOnly_50.json
@@ -1,17 +1,157 @@
 {
   "lanceKey": "Damaged_Easy_TanksOnly_50",
-  "lanceDefId": "Tagged",
+  "lanceDefId": "Manual",
   "lanceTagSet": {
     "items": [
-        "lance_type_support",
-            "lance_type_dynamic",
-            "lance_type_vehicle",
-            "lance_type_roguetech"
     ]
   },
    "spawnEffectTags": {
     "items": ["spawn_poorly_maintained_50"]
   },
   "unitSpawnPointOverrideList": [
+  {
+            "unitType": "Vehicle",
+            "unitId": "Tagged",
+            "unitSimGameID": null,
+            "pilotId": "Tagged",
+            "pilotSimGameID": null,
+            "unitTagSet": {
+                "items": [
+                    "unit_vehicle",
+					"unit_indirectFire",
+                    "{CUR_TEAM.faction}"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "excludedUnitTagSet": {
+                "items": [
+                    "unit_noncombatant",
+                    "unit_bracket_low",
+                    "unit_assault",
+                    "unit_heavy"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "pilotTagSet": {
+                "items": [
+                    "pilot_npc_tanker_d5",
+                    "{CUR_TEAM.faction}"
+                ],
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "excludedPilotTagSet": {
+                "items": null,
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "locked": false
+        },
+        {
+            "unitType": "Vehicle",
+            "unitId": "Tagged",
+            "unitSimGameID": null,
+            "pilotId": "Tagged",
+            "pilotSimGameID": null,
+            "unitTagSet": {
+                "items": [
+                    "unit_vehicle",
+					"unit_indirectFire",
+                    "{CUR_TEAM.faction}"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "excludedUnitTagSet": {
+                "items": [
+                    "unit_noncombatant",
+                    "unit_legendary",
+                    "unit_bracket_low",
+                    "unit_assault",
+                    "unit_heavy"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "pilotTagSet": {
+                "items": [
+                    "pilot_npc_tanker_d5",
+                    "{CUR_TEAM.faction}"
+                ],
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "excludedPilotTagSet": {
+                "items": null,
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "locked": false
+        },
+        {
+            "unitType": "Vehicle",
+            "unitId": "Tagged",
+            "unitSimGameID": null,
+            "pilotId": "Tagged",
+            "pilotSimGameID": null,
+            "unitTagSet": {
+                "items": [
+                    "unit_vehicle",
+					"unit_indirectFire",
+                    "{CUR_TEAM.faction}"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "excludedUnitTagSet": {
+                "items": [
+                    "unit_noncombatant",
+                    "unit_legendary",
+                    "unit_assault"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "pilotTagSet": {
+                "items": [
+                    "pilot_npc_tanker_d5",
+                    "{CUR_TEAM.faction}"
+                ],
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "excludedPilotTagSet": {
+                "items": null,
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "locked": false
+        },
+        {
+            "unitType": "Vehicle",
+            "unitId": "Tagged",
+            "unitSimGameID": null,
+            "pilotId": "Tagged",
+            "pilotSimGameID": null,
+            "unitTagSet": {
+                "items": [
+                    "unit_vehicle",
+					"unit_indirectFire",
+                    "{CUR_TEAM.faction}"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "excludedUnitTagSet": {
+                "items": [
+                    "unit_noncombatant",
+                    "unit_legendary",
+                    "unit_bracket_high",
+                    "unit_assault"
+                ],
+                "tagSetSourceFile": "Tags/UnitTags"
+            },
+            "pilotTagSet": {
+                "items": [
+                    "pilot_npc_tanker_d5",
+                    "{CUR_TEAM.faction}"
+                ],
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "excludedPilotTagSet": {
+                "items": null,
+                "tagSetSourceFile": "Tags/PilotTags"
+            },
+            "locked": false
+        }
   ]
 }
