--- a/MissionControl/lances/Damaged_Easy_Mixed_25.json
+++ b/MissionControl/lances/Damaged_Easy_Mixed_25.json
@@ -1,6 +1,6 @@
 {
   "lanceKey": "Damaged_Easy_Mixed_25",
-  "lanceDefId": "Manual",
+  "lanceDefId": "Tagged",
   "lanceTagSet": {
     "items": [
     ]
