--- a/MissionControlRandom/settings.json
+++ b/MissionControlRandom/settings.json
@@ -29,7 +29,7 @@
     "Autofill": true,
     "LanceSizes": {
 	"3": [{
-        "Faction": "auriganpirates",
+        "Faction": "AuriganPirates",
         "DifficultyMod": 2
       }],
       "5": [
