mortar fix attempt

--- a/RogueModuleTech/Weapons/Weapon_VehicleGrenadeLauncher.json
+++ b/RogueModuleTech/Weapons/Weapon_VehicleGrenadeLauncher.json
@@ -50,6 +50,7 @@
 	"AlternateDamageCalc": true,
 	"FireTerrainChance": 0.01,
 	"CantHitUnaffecedByPathing": true,
+	"SpreadRange": 30,
     "WeaponEffectID": "WeaponEffect-Weapon_LRM5",
     "Description": {
         "Cost": 80000,
