--- a/MissionControlRandomLarge/settings.json
+++ b/MissionControlRandomLarge/settings.json
@@ -11,7 +11,7 @@
     "IncludeEnemyTurrets": false,
   },
   "AdditionalLances": {
-    "Enable": false,
+    "Enable": true,
     "UseElites": false,
     "UseDialogue": true,
     "SkullValueMatters": true,
