--- a/MissionControlRandomLarge/settings.json
+++ b/MissionControlRandomLarge/settings.json
@@ -8,7 +8,7 @@
     "EvasionPipsOnHotDrop": 4,
     "IncludeEnemies": true,
     "IncludeAllyTurrets": false,
-    "IncludeEnemyTurrets": false,
+    "IncludeEnemyTurrets": false
   },
   "AdditionalLances": {
     "Enable": true,
@@ -21,7 +21,7 @@
     "DisableWhenMaxTonnage": {
       "Enable": false,
       "Limited": false,
-      "LimitedToUnder": 300,
+      "LimitedToUnder": 300
     }
   },
   "ExtendedLances": {
@@ -103,11 +103,11 @@
 	  {
         "Faction": "WordOfBlake",
         "DifficultyMod": -4
-      }],
+      }]
     }
   },
   "ExtendedBoundaries": true,
   "DynamicWithdraw": {
-    "Enabled": true,
+    "Enabled": true
   }
 }
