--- a/MissionControlNoRandom/settings.json
+++ b/MissionControlNoRandom/settings.json
@@ -2,7 +2,7 @@
   "DebugMode": true,
   "DebugSkirmishMode": true,
   "DisableIfFlashpointContract": true,
-  "RandomSpawns": true,
+  "RandomSpawns": false,
   "HotDrop": {
     "Enable": false,
     "GuardOnHotDrop": false,
@@ -107,7 +107,7 @@
       }]
     }
   },
-  "ExtendedBoundaries": true,
+  "ExtendedBoundaries": false,
   "DynamicWithdraw": {
     "Enabled": true
   }
