--- a/MissionControlRandom/settings.json
+++ b/MissionControlRandom/settings.json
@@ -2,6 +2,7 @@
   "DebugMode": true,
   "DebugSkirmishMode": true,
   "DisableIfFlashpointContract": true,
+  "RandomSpawns": true,
   "HotDrop": {
     "Enable": false,
     "GuardOnHotDrop": false,
