--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ ICF/chassisdefs/vehiclechassisdef_ICF_Steiner_Light_Scout.json
 ICF/vechdefs/vehicaldef_ICF_Steiner_Light.json
 
 .idea/**
+TranslationCacheRu.json
