--- a/RogueFlashPointModule/settings.json
+++ b/RogueFlashPointModule/settings.json
@@ -12,7 +12,7 @@
 		"player1smercenit",
 		"player2smercmnit",
 		"Owner",
-		"owner",		
+		"owner",
 		"Unknown",
 		"unknown",
 		"Faction_Hostile",
@@ -49,6 +49,10 @@
 		"EdCorbu",
 		"HouseNakano",
 		"DuchyOfAndurien",
-		"BlackCalderaDefense"
+		"BlackCalderaDefense",
+		"Moderbjorn",
+		"BlackWidowCompany",
+		"BaumannGroup",		
+		"BountyHunterAssociates"
 	]
 }
