--- a/MechEngineer/Settings.last.json
+++ b/MechEngineer/Settings.last.json
@@ -155,15 +155,6 @@
         "Enabled" : true,
         "EnabledDescription" : "Enables ignore_damage flag."
     },
-    "DebugCycleCombatSounds" : {
-        "Enabled" : false,
-        "EnabledDescription" : "Cycle through SFX sounds when pressing a specific button on the start menu",
-        "SpecificButton" : "Skirmish"
-    },
-    "DebugSaveMechToFile" : {
-        "Enabled" : false,
-        "EnabledDescription" : "Saves mechdefs to 'MechEngineer/Saves' when saving a mech in the mechlab"
-    },
     "DynamicSlots" : {
         "Enabled" : true,
         "EnabledDescription" : "Allows components to take up space dynamically on a mech.",
@@ -535,5 +526,20 @@
             
         ],
         "BlacklistMechTagsDescription" : "Similar to BlacklistComponentTags but with MechTags"
+    },
+    "DebugCycleCombatSounds" : {
+        "Enabled" : false,
+        "EnabledDescription" : "Cycle through SFX sounds when pressing a specific button on the start menu",
+        "SpecificButton" : "Skirmish"
+    },
+    "DebugSaveMechToFile" : {
+        "Enabled" : false,
+        "EnabledDescription" : "Saves mechdefs to 'MechEngineer/Saves' when saving a mech in the mechlab"
+    },
+    "DebugScreenshotMechs" : {
+        "Enabled" : false,
+        "EnabledDescription" : "Edit a mech then cancel, it then will go through all mechs and make screenshots for them. To improve loading times use the TagManager to blacklist all components so the MechLab doesn't have to load them.",
+        "ScreenshotDirectoryPath" : "screenshots",
+        "ScreenshotDirectoryPathDescription" : "Create the directory manually first, otherwise it won't save any of the images."
     }
 }
