patches and fixes

--- a/MissionControlNoRandom/settings.json
+++ b/MissionControlNoRandom/settings.json
@@ -107,7 +107,10 @@
       }]
     }
   },
-  "ExtendedBoundaries": false,
+  "ExtendedBoundaries": {
+    "Enable": faöse,
+    "IncreaseBoundarySizeByPercentage": 0.1
+  },
   "DynamicWithdraw": {
     "Enabled": true,
 	"MinDistanceForZone": 50,
