--- a/MissionControlRandomX2/settings.json
+++ b/MissionControlRandomX2/settings.json
@@ -107,7 +107,10 @@
       }]
     }
   },
-  "ExtendedBoundaries": true,
+  "ExtendedBoundaries": {
+    "Enable": true,
+    "IncreaseBoundarySizeByPercentage": 0.3
+  },
   "DynamicWithdraw": {
     "Enabled": true,
 	"MinDistanceForZone": 50,
