--- a/MissionControlRandomX4/settings.json
+++ b/MissionControlRandomX4/settings.json
@@ -108,8 +108,8 @@
     }
   },
   "ExtendedBoundaries": {
-    "Enable": false,
-    "IncreaseBoundarySizeByPercentage": 0.2
+    "Enable": true,
+    "IncreaseBoundarySizeByPercentage": 0.6
   },
   "DynamicWithdraw": {
     "Enabled": true,
