--- a/MissionControlRandomX3/settings.json
+++ b/MissionControlRandomX3/settings.json
@@ -112,7 +112,7 @@
     "IncreaseBoundarySizeByPercentage": 1
   },
   "DynamicWithdraw": {
-    "Enabled": true,
+    "Enabled": false,
 	"MinDistanceForZone": 50,
     "MaxDistanceForZone": 400,
     "DisorderlyWithdrawalCompatibility": true
