--- a/MissionControlRandomX4/settings.json
+++ b/MissionControlRandomX4/settings.json
@@ -112,7 +112,7 @@
     "IncreaseBoundarySizeByPercentage": 0.6
   },
   "DynamicWithdraw": {
-    "Enabled": true,
+    "Enabled": false,
 	"MinDistanceForZone": 50,
     "MaxDistanceForZone": 400,
     "DisorderlyWithdrawalCompatibility": true
