--- a/RogueFlashPointModule/settings.json
+++ b/RogueFlashPointModule/settings.json
@@ -9,8 +9,7 @@
 		"SelfEmployed",
 		"selfemployed",
 		"Player1sMercUnit",
-		"player1smercenit",
-		"player2smercmnit",
+		"Player2sMercUnit",
 		"Owner",
 		"owner",
 		"Unknown",
