--- a/MechEngineer/Settings.last.json
+++ b/MechEngineer/Settings.last.json
@@ -205,7 +205,8 @@
                     "ac2",
                     "ac",
                     "lbx",
-                    "PPC"
+                    "PPC",
+                    "ams"
                 ]
             },
             {
@@ -232,7 +233,22 @@
                     "ac2",
                     "ppc",
                     "ac",
-                    "lbx"
+                    "lbx",
+                    "ams"
+                ]
+            },
+            {
+                "PrefabIdentifier" : "Laser",
+                "HardpointCandidates" : [
+                    "laser",
+                    "flamer",
+                    "mg",
+                    "MachineGun",
+                    "ac2",
+                    "ppc",
+                    "ac",
+                    "lbx",
+                    "ams"
                 ]
             },
             {
@@ -242,7 +258,8 @@
                     "uac5",
                     "ac",
                     "lbx",
-                    "PPC"
+                    "PPC",
+                    "ams"
                 ]
             },
             {
@@ -252,7 +269,8 @@
                     "lbx10",
                     "ac",
                     "lbx",
-                    "PPC"
+                    "PPC",
+                    "ams"
                 ]
             },
             {
@@ -263,7 +281,8 @@
                     "ac",
                     "lbx",
                     "ac10",
-                    "lbx10"
+                    "lbx10",
+                    "ams"
                 ]
             },
             {
@@ -272,7 +291,8 @@
                     "ac20",
                     "ac",
                     "lbx",
-                    "PPC"
+                    "PPC",
+                    "ams"
                 ]
             },
             {
@@ -283,7 +303,8 @@
                     "uac",
                     "ac",
                     "lbx",
-                    "PPC"
+                    "PPC",
+                    "ams"
                 ]
             },
             {
@@ -296,7 +317,8 @@
                     "ac",
                     "PPC",
                     "lbx",
-                    "laser"
+                    "laser",
+                    "ams"
                 ]
             },
             {
@@ -307,7 +329,8 @@
                     "ac",
                     "PPC",
                     "lbx",
-                    "laser"
+                    "laser",
+                    "ams"
                 ]
             },
             {
@@ -318,7 +341,8 @@
                     "gauss",
                     "ac",
                     "lbx",
-                    "PPC"
+                    "PPC",
+                    "ams"
                 ]
             },
             {
@@ -331,7 +355,8 @@
                     "srm20",
                     "machinegun",
                     "mg",
-                    "flamer"
+                    "flamer",
+                    "ams"
                 ]
             },
             {
@@ -344,7 +369,8 @@
                     "lrm5",
                     "machinegun",
                     "mg",
-                    "flamer"
+                    "flamer",
+                    "ams"
                 ]
             },
             {
@@ -357,7 +383,8 @@
                     "lrm5",
                     "machinegun",
                     "mg",
-                    "flamer"
+                    "flamer",
+                    "ams"
                 ]
             },
             {
@@ -371,7 +398,8 @@
                     "lrm10",
                     "machinegun",
                     "mg",
-                    "flamer"
+                    "flamer",
+                    "ams"
                 ]
             },
             {
@@ -384,7 +412,8 @@
                     "lrm5",
                     "machinegun",
                     "mg",
-                    "flamer"
+                    "flamer",
+                    "ams"
                 ]
             },
             {
@@ -393,7 +422,8 @@
                     "machinegun",
                     "mg",
                     "flamer",
-                    "laser"
+                    "laser",
+                    "ams"
                 ]
             },
             {
@@ -404,7 +434,8 @@
                     "srm6",
                     "machinegun",
                     "mg",
-                    "flamer"
+                    "flamer",
+                    "ams"
                 ]
             },
             {
@@ -415,7 +446,8 @@
                     "srm2",
                     "machinegun",
                     "mg",
-                    "flamer"
+                    "flamer",
+                    "ams"
                 ]
             },
             {
@@ -426,7 +458,8 @@
                     "srm2",
                     "machinegun",
                     "mg",
-                    "flamer"
+                    "flamer",
+                    "ams"
                 ]
             }
         ]
