--- a/MissionControlNoRandom/settings.json
+++ b/MissionControlNoRandom/settings.json
@@ -108,7 +108,7 @@
     }
   },
   "ExtendedBoundaries": {
-    "Enable": faöse,
+    "Enable": false,
     "IncreaseBoundarySizeByPercentage": 0.1
   },
   "DynamicWithdraw": {
