rollback enum method

--- a/MechEngineer/Settings.json
+++ b/MechEngineer/Settings.json
@@ -304,7 +304,11 @@
           "ac",
           "lbx",
 		  "PPC",
-          "ams"
+          "ams",
+		  "machinegun",
+          "mg",
+          "flamer",
+		  "laser"
         ]
       },
       {
