--- a/MechEngineer/Settings.last.json
+++ b/MechEngineer/Settings.last.json
@@ -342,7 +342,11 @@
                     "ac",
                     "lbx",
                     "PPC",
-                    "ams"
+                    "ams",
+                    "machinegun",
+                    "mg",
+                    "flamer",
+                    "laser"
                 ]
             },
             {
