--- a/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
+++ b/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
@@ -23,6 +23,16 @@
 		"burnedtrees",
 		"helicopter_sound"
 	],
+	"bloodSettings":{
+  "DecalScales":{
+    "smallVehicle":10,
+    "mediumVehicle":20,
+    "largeVehicle":30,
+    "vehicleFiery":15
+  },
+  "DecalTexture": "envTxrDecl_terrainDmgSmallBlood_alb",
+  "DrawBloodChance": 0.3
+},
 	"NoForestBiomes": [
 		"DesignMaskBiomeMartianVacuum",
 		"DesignMaskBiomeLunarVacuum"
