missing no boxes

--- a/BTRandomStartByDifficultyMenu/Menus/CareerDifficultySettings.json
+++ b/BTRandomStartByDifficultyMenu/Menus/CareerDifficultySettings.json
@@ -2626,7 +2626,7 @@
 			"Visible": true,
 			"Toggle": false,
 			"StartOnly": false,
-			"DefaultIndex": 2,
+			"DefaultIndex": 6,
 			"Options": [
 				{
 					"ID": "diff_UrCruinne",
@@ -2653,6 +2653,78 @@
 					]
 				},
 				{
+					"ID": "diff_ClanPrimitive",
+					"Name": "Clan Primitive",
+					"TelemetryEventDesc": "",
+					"DifficultyValue": 0,
+					"CareerScoreModifier" : 0,
+					"DifficultyConstants": [
+						{
+							"ConstantType": "CareerMode",
+							"ConstantName": "StartingSystems",
+							"ConstantValue": "Roche"
+						},
+						{
+							"ConstantType": "CareerMode",
+							"ConstantName": "StartingRandomMechLists",
+							"ConstantValue": "itemCollection_Mechs_Starting_Primitive_Heavy,itemCollection_Mechs_Starting_Primitive_Light,itemCollection_Mechs_Starting_Primitive_Medium,itemCollection_Mechs_Starting_Primitive1_Light,itemCollection_Mechs_Starting_Primitive1_Medium"
+						},
+						{
+                            "ConstantType": "CareerMode",
+                            "ConstantName": "FactionReputation",
+                            "ConstantValue": "AuriganMercenaries:30,AuriganPirates:30,AuriganRestoration:30,AuriganDirectorate:30" 
+						}
+					]
+				},
+				{
+					"ID": "diff_Toads",
+					"Name": "Elementals",
+					"TelemetryEventDesc": "",
+					"DifficultyValue": 0,
+					"CareerScoreModifier" : 0,
+					"DifficultyConstants": [
+						{
+							"ConstantType": "CareerMode",
+							"ConstantName": "StartingSystems",
+							"ConstantValue": "Kirin"
+						},
+						{
+							"ConstantType": "CareerMode",
+							"ConstantName": "StartingRandomMechLists",
+							"ConstantValue": "itemCollection_Mechs_Starting_Toad,itemCollection_Mechs_Starting_Toad,itemCollection_Mechs_Starting_Toad,itemCollection_Mechs_Starting_Toad,itemCollection_Mechs_Starting_Toad"
+						},
+						{
+                            "ConstantType": "CareerMode",
+                            "ConstantName": "FactionReputation",
+                            "ConstantValue": "ClanBurrock:20,ClanCloudCobra:20,ClanCoyote:20,ClanDiamondShark:20,ClanFireMandrill:20,ClanGhostBear:20,ClanGoliathScorpion:20,ClanHellsHorses:20,ClanIceHellion:20,ClanJadeFalcon:20,ClanNovaCat:20,ClansGeneric:20,ClanSmokeJaguar:20,ClanSnowRaven:20,ClanStarAdder:20,ClanSteelViper:20,ClanWolf:20" 
+						}
+					]
+				},
+				{
+					"ID": "diff_BattleArmor",
+					"Name": "BattleArmor",
+					"TelemetryEventDesc": "",
+					"DifficultyValue": 0,
+					"CareerScoreModifier" : 0,
+					"DifficultyConstants": [
+						{
+							"ConstantType": "CareerMode",
+							"ConstantName": "StartingSystems",
+							"ConstantValue": "Vega"
+						},
+						{
+							"ConstantType": "CareerMode",
+							"ConstantName": "StartingRandomMechLists",
+							"ConstantValue": "itemCollection_Mechs_Starting_Battlearmour,itemCollection_Mechs_Starting_Battlearmour,itemCollection_Mechs_Starting_Battlearmour,itemCollection_Mechs_Starting_Battlearmour,itemCollection_Mechs_Starting_Battlearmour"
+						},
+						{
+                            "ConstantType": "CareerMode",
+                            "ConstantName": "FactionReputation",
+                            "ConstantValue": "MercenaryReviewBoard:100,AuriganPirates:30" 
+						}
+					]
+				},
+				{
 					"ID": "diff_Solaris",
 					"Name": "Solaris",
 					"TelemetryEventDesc": "",
@@ -2675,7 +2747,31 @@
                             "ConstantValue": "MercenaryReviewBoard:100,AuriganPirates:30" 
 						}
 					]
-				},					
+				},		
+				{
+					"ID": "diff_Urbie",
+					"Name": "Urbies",
+					"TelemetryEventDesc": "",
+					"DifficultyValue": 0,
+					"CareerScoreModifier" : 0,
+					"DifficultyConstants": [
+						{
+							"ConstantType": "CareerMode",
+							"ConstantName": "StartingSystems",
+							"ConstantValue": "Betelgeuse"
+						},
+						{
+							"ConstantType": "CareerMode",
+							"ConstantName": "StartingRandomMechLists",
+							"ConstantValue": "itemCollection_Mechs_Starting_Urbanmech,itemCollection_Mechs_Starting_Urbanmech,itemCollection_Mechs_Starting_Urbanmech,itemCollection_Mechs_Starting_Urbanmech,itemCollection_Mechs_Starting_Urbanmech"
+						},
+						{
+                            "ConstantType": "CareerMode",
+                            "ConstantName": "FactionReputation",
+                            "ConstantValue": "MercenaryReviewBoard:100,AuriganPirates:30" 
+						}
+					]
+				},				
 				{
 					"ID": "diff_galatea",
 					"Name": "Mercenary",
