--- a/RogueModuleTech/Primitive/Weapons/Weapon_HEAVYAOE_ROCKETLAUNCHER15.json
+++ b/RogueModuleTech/Primitive/Weapons/Weapon_HEAVYAOE_ROCKETLAUNCHER15.json
@@ -23,10 +23,10 @@
     "InventorySorter": {
       "SortKey": "03003"
     },
-	"Flags": {
+    "Flags": {
       "flags": [
         "not_broken",
-		"not_destroyed"
+        "not_destroyed"
       ]
     }
   },
@@ -127,9 +127,7 @@
   "AllowedLocations": "All",
   "DisallowedLocations": "All",
   "CriticalComponent": false,
-  "statusEffects": [
-
-  ],
+  "statusEffects": [],
   "ComponentTags": {
     "items": [
       "component_type_stock",
