--- a/RogueTechDebug/Debug/settings.json
+++ b/RogueTechDebug/Debug/settings.json
@@ -70,7 +70,8 @@
    ],
       "fileLogAppenders" : [
       "CombatLog",
-      "AI"
+      "AI",
+	  "ModLoader"
    ],
    "disablePhysicsOnLoad": true,
    "disableLoggingOnLoad": false,
