--- a/MechEngineer/Settings.json
+++ b/MechEngineer/Settings.json
@@ -26,7 +26,10 @@
     ],
     "Enabled": false
   },
+  
   "AutoFixer": {
+  "MechDefAutoFixAgainstMaxFreeTonnage" : [
+        ],
     "MechDefSkip": [
     ],
     "MechDefEngine": true,
