Destroy Base Update

--- a/RogueTech Core/Contracts/destroybase/2/DestroyBase_CeaseAndDesist.json
+++ b/RogueTech Core/Contracts/destroybase/2/DestroyBase_CeaseAndDesist.json
@@ -1,6 +1,5 @@
 {
     "ID": "DestroyBase_CeaseAndDesist",
-	"filename": "DestroyBase_CeaseAndDesist.json",
     "contractName": "Cease and Desist",
     "contractDisplayStyle": "BaseCampaignNormal",
     "difficulty": 2,
@@ -8,7 +7,11 @@
     "weight": 1,
     "scope": "STANDARD",
     "finalDifficulty": 0,
-    "shortDescription": "We have reliable information that a remote {TEAM_TAR.FactionDef.Demonym} laboratory is attempting to reverse-engineer sensitive {TEAM_EMP.FactionDef.Demonym} technology in violation of the usage license. They have failed to respond to our cease and desist letter, the delivery of which has been certified by ComStar. Therefore, we authorize you to execute the license termination clause upon that facility.",
+    "representativeCastDefIDOverride": null,
+    "missionSuccessStatementOverride": null,
+    "badFaithStatementOverride": null,
+    "goodFaithStatementOverride": null,
+    "shortDescription": "We have reliable information that a remote {TEAM_TAR.FactionDef.Demonym} laboratory is attempting to reverse-engineer sensitive {TEAM_EMP.FactionDef.Demonym} technology in violation of the usage license. They have failed to respond to our communications that they cease and desist these unlawful operations. Therefore, we authorize you to execute the license termination clause upon that facility.",
     "longDescription": "The contract does not specify any retrieval, Commander. We are to bring the base down and destroy the tech with it.",
     "salvagePotential": 12,
     "requirementList": [
@@ -46,7 +49,6 @@
     ],
     "OnContractSuccessResults": [],
     "OnContractFailureResults": [],
-    "contractType": "DestroyBase",
     "encounterPlayStyle": "SinglePlayer",
     "maxNumberOfPlayerUnits": 4,
     "lanceMinTonnage": -1,
@@ -91,7 +93,9 @@
             "description": "",
             "isPrimary": true,
             "OnSuccessResults": [],
-            "OnFailureResults": []
+            "OnFailureResults": [],
+            "OnSuccessDialogueGUID": null,
+            "OnFailureDialogueGUID": null
         },
         {
             "objective": {
@@ -127,7 +131,9 @@
                     "ResultDuration": 0
                 }
             ],
-            "OnFailureResults": []
+            "OnFailureResults": [],
+            "OnSuccessDialogueGUID": null,
+            "OnFailureDialogueGUID": null
         },
         {
             "objective": {
@@ -163,7 +169,9 @@
                     "ResultDuration": 0
                 }
             ],
-            "OnFailureResults": []
+            "OnFailureResults": [],
+            "OnSuccessDialogueGUID": null,
+            "OnFailureDialogueGUID": null
         },
         {
             "objective": {
@@ -199,7 +207,9 @@
                     "ResultDuration": 0
                 }
             ],
-            "OnFailureResults": []
+            "OnFailureResults": [],
+            "OnSuccessDialogueGUID": null,
+            "OnFailureDialogueGUID": null
         },
         {
             "objective": {
@@ -209,7 +219,9 @@
             "description": "",
             "isPrimary": true,
             "OnSuccessResults": [],
-            "OnFailureResults": []
+            "OnFailureResults": [],
+            "OnSuccessDialogueGUID": null,
+            "OnFailureDialogueGUID": null
         }
     ],
     "artilleryObjectiveList": [],
@@ -221,6 +233,7 @@
                 "EncounterObjectGuid": "a5257151-5269-4222-9a0d-31001a70fe22"
             },
             "enableChunkFromContract": false,
+            "controlledByContractChunkGroupList": [],
             "requirementList": []
         }
     ],
@@ -496,6 +509,8 @@
             ]
         }
     ],
+    "extractionOverrideList": [],
+    "overwriteMissionCompleteWhenAutoComplete": true,
     "overrideAutoCompleteDialogueId": null,
     "disableNegotations": false,
     "disableLanceConfiguration": false,
@@ -508,6 +523,7 @@
     "expirationTimeOverride": -1,
     "negotiatedSalary": 1,
     "negotiatedSalvage": 0,
+    "excludedFromProceduralGeneration": false,
     "player1Team": {
         "encounterLayerData": {
             "EncounterObjectGuid": "ca92ce11-36c5-40d1-ac17-2559e1d3bcc9"
@@ -1215,5 +1231,14 @@
         "teamLeaderCastDefId": "castDef_TeamLeader_Current",
         "lanceOverrideList": []
     },
-    "stopTellingMe": false		
+    "employersAllyTeam": {
+        "encounterLayerData": null,
+        "teamGuid": "70af7e7f-39a8-4e81-87c2-bd01dcb01b5e",
+        "teamName": "Employers Ally",
+        "faction": "INVALID_UNSET",
+        "teamLeaderCastDefId": "castDef_TeamLeader_Current",
+        "lanceOverrideList": []
+    },
+    "contractType": "DestroyBase",
+    "contractTypeID": "DestroyBase"
 }
