me and ammo box patches

--- a/MechEngineer/Settings.defaults.json
+++ b/MechEngineer/Settings.defaults.json
@@ -39,6 +39,12 @@
         "MechDefTagsSkip" : [
             "noautofix"
         ],
+        "MechDefAutoFixAgainstMaxFreeTonnage" : [
+            "mechdef_atlas_AS7-D-HT",
+            "mechdef_blackknight_BL-6b-KNT",
+            "mechdef_highlander_HGN-732b"
+        ],
+        "MechDefAutoFixInitialTonnageDiffThreshold" : 0.4,
         "MechDefEngine" : true,
         "MechDefCoolingDef" : "emod_kit_shs",
         "MechDefHeatBlockDef" : "emod_engine_cooling",
@@ -403,8 +409,10 @@
     "DynamicSlots" : {
         "Enabled" : true,
         "EnabledDescription" : "Allows components to take up space dynamically on a mech.",
-        "DynamicSlotsValidateDropEnabled" : false,
-        "DynamicSlotsValidateDropEnabledDescription" : "Don't allow dropping of items that would exceed the available slots."
+        "DynamicSlotsValidateDropEnabledDescription" : "Don't allow dropping of items that would exceed the available slots.",
+        "DynamicSlotsValidateDropEnabled" : true,
+        "ReservedSlotText" : "reserved slot",
+        "MovableSlotText" : "movable slot"
     },
     "Engine" : {
         "Enabled" : true,
