--- a/MechEngineer/Settings.json
+++ b/MechEngineer/Settings.json
@@ -144,8 +144,12 @@
     "Enabled": false
   },
   "DynamicSlots": {
-    "DynamicSlotsValidateDropEnabled": true,
-    "Enabled": true
+    "Enabled" : true,
+        "EnabledDescription" : "Allows components to take up space dynamically on a mech.",
+        "DynamicSlotsValidateDropEnabledDescription" : "Don't allow dropping of items that would exceed the available slots.",
+        "DynamicSlotsValidateDropEnabled" : true,
+        "ReservedSlotText" : "Reserved Slot",
+        "MovableSlotText" : "Movable Slot"
   },
   "Engine": {
     "MinimumHeatSinksOnMech": 10,
