--- a/MechEngineer/Settings.last.json
+++ b/MechEngineer/Settings.last.json
@@ -39,6 +39,10 @@
         "MechDefTagsSkip" : [
             "noautofix"
         ],
+        "MechDefAutoFixAgainstMaxFreeTonnage" : [
+            
+        ],
+        "MechDefAutoFixInitialTonnageDiffThreshold" : 0.4,
         "MechDefEngine" : true,
         "MechDefCoolingDef" : "emod_kit_shs",
         "MechDefHeatBlockDef" : "Gear_Engine_Heatsinks",
@@ -162,8 +166,10 @@
     "DynamicSlots" : {
         "Enabled" : true,
         "EnabledDescription" : "Allows components to take up space dynamically on a mech.",
+        "DynamicSlotsValidateDropEnabledDescription" : "Don't allow dropping of items that would exceed the available slots.",
         "DynamicSlotsValidateDropEnabled" : true,
-        "DynamicSlotsValidateDropEnabledDescription" : "Don't allow dropping of items that would exceed the available slots."
+        "ReservedSlotText" : "Reserved Slot",
+        "MovableSlotText" : "Movable Slot"
     },
     "Engine" : {
         "Enabled" : true,
