--- a/MechEngineer/Settings.defaults.json
+++ b/MechEngineer/Settings.defaults.json
@@ -411,6 +411,17 @@
         "EnabledDescription" : "Allows components to take up space dynamically on a mech.",
         "DynamicSlotsValidateDropEnabledDescription" : "Don't allow dropping of items that would exceed the available slots.",
         "DynamicSlotsValidateDropEnabled" : true,
+        "LocationPriorityOrder" : [
+            "CenterTorso",
+            "Head",
+            "LeftTorso",
+            "LeftLeg",
+            "RightTorso",
+            "RightLeg",
+            "LeftArm",
+            "RightArm"
+        ],
+        "LocationPriorityOrderDescription" : "From highest to lowest priority where to add dynamic slots too, relevant if locations have same amount of free slots. Visual impact only.",
         "ReservedSlotText" : "reserved slot",
         "MovableSlotText" : "movable slot"
     },
