--- a/RogueHeavyMetalModule/contracts/flashpoint/HM3_huntingSeason/HM3_huntingSeason_1_3wayBattle.json
+++ b/RogueHeavyMetalModule/contracts/flashpoint/HM3_huntingSeason/HM3_huntingSeason_1_3wayBattle.json
@@ -3190,7 +3190,7 @@
             "overrideDialogueBucketId" : "",
             "dialogueContent" : [
                 {
-                    "words" : "PLACEHOLDER. Looks like we have some unexpeted support from {TEAM_EMP_ALLY.FactionDef.Demonym} forces. This is the Primary version.",
+                    "words" : "PLACEHOLDER. Looks like we have some unexpected support from {TEAM_EMP_ALLY.FactionDef.Demonym} forces. This is the Primary version.",
                     "wordsColor" : {
                         "r" : 1,
                         "g" : 1,
@@ -3247,7 +3247,7 @@
             "overrideDialogueBucketId" : "",
             "dialogueContent" : [
                 {
-                    "words" : "PLACEHOLDER. Looks like we have some unexpeted support from {TEAM_EMP_ALLY.FactionDef.Demonym} forces. This is the Secondary version.",
+                    "words" : "PLACEHOLDER. Looks like we have some unexpected support from {TEAM_EMP_ALLY.FactionDef.Demonym} forces. This is the Secondary version.",
                     "wordsColor" : {
                         "r" : 1,
                         "g" : 1,
