Spelling: Survives (Caps)

--- a/RogueHeavyMetalModule/contracts/flashpoint/HM1_ofUnknownOrigin/HM1_ofUnknownOrigin_2_3wayBattle.json
+++ b/RogueHeavyMetalModule/contracts/flashpoint/HM1_ofUnknownOrigin/HM1_ofUnknownOrigin_2_3wayBattle.json
@@ -1361,7 +1361,7 @@
             },
             "enableChunkFromContract" : false,
             "controlledByContractChunkGroupList" : [
-                "Ensure Player Unit in Slot One Surivives Chunk Group"
+                "Ensure Player Unit in Slot One Survives Chunk Group"
             ],
             "requirementList" : []
         },
@@ -1372,7 +1372,7 @@
             },
             "enableChunkFromContract" : false,
             "controlledByContractChunkGroupList" : [
-                "Ensure Player Unit in Slot One Surivives Chunk Group"
+                "Ensure Player Unit in Slot One Survives Chunk Group"
             ],
             "requirementList" : []
         },
