--- a/RogueHeavyMetalModule/contracts/flashpoint/HM3_huntingSeason/HM3_huntingSeason_1_3wayBattle.json
+++ b/RogueHeavyMetalModule/contracts/flashpoint/HM3_huntingSeason/HM3_huntingSeason_1_3wayBattle.json
@@ -1324,7 +1324,7 @@
             },
             "enableChunkFromContract" : false,
             "controlledByContractChunkGroupList" : [
-                "Ensure Player Unit in Slot One Surivives Chunk Group"
+                "Ensure Player Unit in Slot One Survives Chunk Group"
             ],
             "requirementList" : []
         },
@@ -1335,7 +1335,7 @@
             },
             "enableChunkFromContract" : false,
             "controlledByContractChunkGroupList" : [
-                "Ensure Player Unit in Slot One Surivives Chunk Group"
+                "Ensure Player Unit in Slot One Survives Chunk Group"
             ],
             "requirementList" : []
         },
