--- a/BattletechPerformanceFix/Settings.json
+++ b/BattletechPerformanceFix/Settings.json
@@ -1,5 +1,5 @@
 {
-  "logLevel": "Debug",
+  "logLevel": "info",
   "features": {
     "MechlabFix": true,
     "LoadFixes": true,
@@ -10,10 +10,10 @@
     "EnableLoggingDuringLoads": true,
     "ExtraLogging": true,
     "ShaderDependencyOverride": true,
-    "GhostBlipOverride": false,
     "DisableDeployAudio": false,
     "RemovedFlashpointFix": true,
-    "DisableSimAnimations": true
+    "DisableSimAnimations": true,
+    "RemovedContractsFix": true
   },
   "WantContractsLagFixVerify": false
 }
