--- a/MissionControlRandomX4/settings.json
+++ b/MissionControlRandomX4/settings.json
@@ -13,6 +13,7 @@
   },
   "AdditionalLances": {
     "Enable": true,
+	"ExcludeContractTypes": ["SoloDuel", "DuoDuel"],
     "UseElites": false,
     "UseDialogue": true,
     "SkullValueMatters": true,
@@ -27,6 +28,7 @@
   },
   "ExtendedLances": {
     "Enable": true,
+	"ExcludeContractTypes": ["SoloDuel", "DuoDuel"],
     "Autofill": true,
     "LanceSizes": {
       "5": [
@@ -109,7 +111,8 @@
   },
   "ExtendedBoundaries": {
     "Enable": true,
-    "IncreaseBoundarySizeByPercentage": 0.6
+	"ExcludeContractTypes": ["SoloDuel", "DuoDuel"],
+    "IncreaseBoundarySizeByPercentage": 1
   },
   "DynamicWithdraw": {
     "Enabled": false,
