--- a/MissionControlRandom/settings.json
+++ b/MissionControlRandom/settings.json
@@ -13,6 +13,7 @@
   },
   "AdditionalLances": {
     "Enable": true,
+	"ExcludeContractTypes": ["SoloDuel", "DuoDuel"],
     "UseElites": false,
     "UseDialogue": true,
     "SkullValueMatters": true,
@@ -27,6 +28,7 @@
   },
   "ExtendedLances": {
     "Enable": true,
+	"ExcludeContractTypes": ["SoloDuel", "DuoDuel"],
     "Autofill": true,
     "LanceSizes": {
       "5": [
@@ -109,10 +111,12 @@
   },
   "ExtendedBoundaries": {
     "Enable": false,
+	"ExcludeContractTypes": ["SoloDuel", "DuoDuel"],
     "IncreaseBoundarySizeByPercentage": 0.2
   },
   "DynamicWithdraw": {
     "Enabled": false,
+	"ExcludeContractTypes": ["SoloDuel", "DuoDuel"],
 	"MinDistanceForZone": 50,
     "MaxDistanceForZone": 400,
     "DisorderlyWithdrawalCompatibility": true
