--- a/MissionControlNoRandom/settings.json
+++ b/MissionControlNoRandom/settings.json
@@ -2,7 +2,10 @@
   "DebugMode": true,
   "DebugSkirmishMode": true,
   "DisableIfFlashpointContract": true,
-  "RandomSpawns": false,
+  "RandomSpawns": {
+    "Enable": false,
+    "ExcludeContractTypes": ["SoloDuel", "DuoDuel"]
+  },
   "HotDrop": {
     "Enable": false,
     "GuardOnHotDrop": false,
