--- a/MechEngineer/Settings.defaults.json
+++ b/MechEngineer/Settings.defaults.json
@@ -663,7 +663,8 @@
         "Enabled" : true,
         "EnabledDescription" : "Makes the mech lab adhere to any custom mech slot counts.",
         "MechLabArmTopPadding" : 120,
-        "MechLabGeneralSlots" : 3
+        "MechLabGeneralSlots" : 3,
+        "MechLabGeneralWidgetLabel" : "General"
     },
     "MoveMultiplierStat" : {
         "Enabled" : true,
@@ -671,7 +672,7 @@
     },
     "OrderedStatusEffects" : {
         "Enabled" : true,
-        "EnabledDescription" : "Orders status effects, so e.g. install order of mechComponents does not matter for additive and multiplicative effects.",
+        "EnabledDescription" : "Orders status effects, so e.g. install order of mechComponents does not matter for additive and multiplicative effects. Affects all statistic data.",
         "OrderDescription" : "The order in which operations are sorted. Operations not part of the list are deemded unsortable and only sortable operations after such a unsortable operations are sorted. For Example: '* + SET / * +' =sort=> '* + SET + * /'.",
         "Order" : [
             "Int_Add",
