--- a/MechEngineer/Settings.json
+++ b/MechEngineer/Settings.json
@@ -460,9 +460,10 @@
     "Enabled": true
   },
   "MechLabSlots": {
-    "MechLabGeneralWidgetEnabled": false,
+    "MechLabGeneralWidgetEnabled": true,
     "MechLabArmTopPadding": 120,
-    "MechLabGeneralSlots": 0,
+    "MechLabGeneralSlots": 2,
+	"MechLabGeneralWidgetLabel" : "Hand Held"
     "Enabled": true
   },
   "MoveMultiplierStat": {
